--- a/example_2_jekyll/_includes/hero.html
+++ b/example_2_jekyll/_includes/hero.html
@@ -1,7 +1,7 @@
 <!-- Banner -->
 <section id="banner">
     <div class="inner">
-        <h1>Welcome ReDi School!</h1>
+        <h1>Daria</h1>
         <p>I hope this lets you see how you can quickly host a website using docker<br />
             and using "Infrastructure as Code" techniques locally, you can improve your development environment</p>
     </div>
