--- a/docs/_includes/hero.html
+++ b/docs/_includes/hero.html
@@ -4,6 +4,8 @@
         <h1>Daria</h1>
         <p>I hope this lets you see how you can quickly host a website using docker<br />
             and using "Infrastructure as Code" techniques locally, you can improve your development environment</p>
+            <p>Here is my changes</p>
+            <h2>Hope you can see it!!!!</h2>
     </div>
     <video autoplay loop muted playsinline src="images/banner.mp4"></video>
 </section>
